matrix.cppresult.txt
In file included from cur.cpp:16:0:
kasheev/matrix.cpp:216:7: error: prototype for 'float Matrix::get(int, int) const' does not match any in class 'Matrix'
 float Matrix::get(int i, int j) const
       ^
kasheev/matrix.cpp:71:8: error: candidate is: float Matrix::get(int, int)
  float get(int i, int j);
        ^
./check.sh: line 24: ./a.out: No such file or directory
